--- a/test/html/baselines/blank-lines.html
+++ b/test/html/baselines/blank-lines.html
@@ -1,13 +1,9 @@
-<h1>TypeError: Cannot read property 'marker' of undefined</h1>
-<p>After updating to <code>v2.1.0</code> I am now getting this error.</p>
-<p>My gatsby-config.js file looks like this:</p>
-<pre class="grvsc-container default-dark" data-language="js" data-index="0"><code class="grvsc-code"><span class="grvsc-line"><span class="grvsc-source"><span class="mtk1">{</span></span></span>
-<span class="grvsc-line"><span class="grvsc-source"><span class="mtk1">    resolve: </span><span class="mtk8">"gatsby-remark-vscode"</span><span class="mtk1">,</span></span></span>
-<span class="grvsc-line"><span class="grvsc-source"><span class="mtk1">    options: {</span></span></span>
-<span class="grvsc-line"><span class="grvsc-source"><span class="mtk1">        theme: </span><span class="mtk8">"Shades of Purple"</span><span class="mtk1">,</span></span></span>
-<span class="grvsc-line"><span class="grvsc-source"><span class="mtk1">        extensions: [</span><span class="mtk8">"shades-of-purple"</span><span class="mtk1">],</span></span></span>
-<span class="grvsc-line"><span class="grvsc-source"><span class="mtk1">    },</span></span></span>
-<span class="grvsc-line"><span class="grvsc-source"><span class="mtk1">},</span></span></span></code></pre>
+<h1>Blank lines</h1>
+<pre class="grvsc-container default-dark" data-language="ts" data-index="0"><code class="grvsc-code"><span class="grvsc-line"><span class="grvsc-source"><span class="mtk3">// You have to make sure</span></span></span>
+<span class="grvsc-line"><span class="grvsc-source"></span></span>
+<span class="grvsc-line"><span class="grvsc-source"><span class="mtk3">// blank lines</span></span></span>
+<span class="grvsc-line"><span class="grvsc-source"></span></span>
+<span class="grvsc-line"><span class="grvsc-source"><span class="mtk3">// don’t disappear</span></span></span></code></pre>
 <style class="grvsc-styles">
   .grvsc-container {
     overflow: auto;
@@ -101,8 +97,7 @@
     background-color: #1E1E1E;
     color: #D4D4D4;
   }
-  .default-dark .mtk1 { color: #D4D4D4; }
-  .default-dark .mtk8 { color: #CE9178; }
+  .default-dark .mtk3 { color: #6A9955; }
   .default-dark .grvsc-line-highlighted::before {
     background-color: var(--grvsc-line-highlighted-background-color, rgba(255, 255, 255, 0.1));
     box-shadow: inset var(--grvsc-line-highlighted-border-width, 4px) 0 0 0 var(--grvsc-line-highlighted-border-color, rgba(255, 255, 255, 0.5));
